--- a/index.ipynb
+++ b/index.ipynb
@@ -73,7 +73,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import plotly\n",
+    "from plotly.offline import iplot, init_notebook_mode\n",
     "\n",
+    "init_notebook_mode(connected=True)\n",
+    "\n",
+    "def plot(figure):\n",
+    "    plotly.offline.iplot(figure)\n",
     "from lib.graph import trace_values, plot, layout\n",
     "\n",
     "regression_trace = trace_values([0, 150], [0, 450], mode = 'lines', name = 'estimated revenue')\n",
